# Rocket

./: Cargo.toml
examples/webauthn/: Cargo.toml
examples/webauthn/src/: main.rs
examples/webauthn/static/js/: register.js
examples/webauthn/templates/: base.html.tera  index.html.tera
