[package]
name = "webauthn"
version = "0.0.0"
workspace = "../../"
publish = false

[dependencies]
rocket = { path = "../../core/lib" }
rocket_codegen = { path = "../../core/codegen" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.5"
base64 = "0.9"
url = "1.7.1"
url_serde = "0.2"
serde_cbor = "0.9"
ring = "0.13"
webpki = "0.18.1"
untrusted = "*"
der-parser = "1.0.0"

[dependencies.rocket_contrib]
path = "../../contrib/lib"
default-features = false
features = ["tera_templates", "json", "static_files"]
